// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен корректно отрендерится без показа номера телефона 1`] = `
<Button
  className="CardGroupListingItemPhoneButton CardGroupListingItemPhoneButton_customHover"
  color="green"
  onClick={[Function]}
  size="l"
  type="button"
  width="default"
>
  <IconSvg
    className="CardGroupListingItemPhoneButton__phoneIcon"
    id="svgID"
    size="24"
  />
  Показать контакты
</Button>
`;

exports[`должен корректно отрендерится с показом номера телефона 1`] = `
<Button
  className="CardGroupListingItemPhoneButton"
  color="gray"
  onClick={[Function]}
  size="l"
  type="button"
  width="default"
>
  +7 499 938-56-03
</Button>
`;
